# photometa-restore

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
photometa_restore/: __init__.py  __main__.py  cli.py  config.py  gui.py  processor.py
photometa_restore/resources/: __init__.py  icon.py
photometa_restore/utils/: __init__.py  benchmarking.py  file_operations.py  logging_utils.py  metadata.py  metadata_enhanced.py  validation.py
test_data/photos/: sample1.json  sample2.json  template.json
tests/: __init__.py  conftest.py  pytest.ini
tests/fixtures/: create_test_images.py
tests/fixtures/images/: test_image.json  test_image_geo.json  test_image_old.json
tests/integration/: test_file_operations.py  test_metadata_processing.py
tests/utils/: test_utils.py
